--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
 [user]
 # Please adapt and uncomment the following lines:
 	name = Brett Slaski
-	email = brett@thatconference.com
+	email = brettski@yahoo.com
 # mbw-key
 	signingkey = 42CBD0625C45C007
 [core]
